# Ambiguity_Classifier

./: .gitignore  README.md
ambiclass_pkg/: pyproject.toml
ambiclass_pkg/src/ambiguity_simple/: __init__.py  classifier.py  cli.py  evaluation.py
data/: README.md
data/gold/: gold_standard.tsv
data/input/: gold_standard_TEST.txt
